# KODE_Task

./: .gitignore  CMakeLists.txt  file.txt  main.cpp
include/: Database.h  MenuPrinter.h  Object.h  UI.h
src/: Database.cpp  MenuPrinter.cpp  Object.cpp  UI.cpp
